[gd_scene load_steps=32 format=2]

[ext_resource path="res://Scenes/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://Blur.tres" type="Material" id=2]
[ext_resource path="res://default_theme.tres" type="Theme" id=3]
[ext_resource path="res://SWROMNS.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://Bosque.png" type="Texture" id=5]
[ext_resource path="res://Main Menu/Saves Screen.gd" type="Script" id=6]
[ext_resource path="res://Main Menu/Save Slot.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Quitting Label.tscn" type="PackedScene" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.427451, 0.427451, 0.427451, 1 )

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;
render_mode unshaded;

uniform float blur_amount;

void fragment() {
	vec4 old_color = COLOR;
	vec3 screen = textureLod(SCREEN_TEXTURE, SCREEN_UV, blur_amount).rgb;
	COLOR.rgb = screen * old_color.rgb;
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/blur_amount = 3.0

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.215686, 0.215686, 0.215686, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.137255, 0.137255, 0.137255, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.27451, 0.27451, 0.27451, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 2

[sub_resource type="DynamicFont" id=7]
size = 27
font_data = ExtResource( 4 )

[sub_resource type="Shader" id=8]
code = "shader_type canvas_item;
render_mode blend_mix;

uniform float radius = 5.0;
uniform vec4  modulate : hint_color;

void fragment() {
	vec2 ps = TEXTURE_PIXEL_SIZE;

	vec4 shadow = texture(TEXTURE, UV + vec2(-radius, -radius) * ps);

	shadow += texture(TEXTURE, UV + vec2(-radius, 0.0) * ps);
	shadow += texture(TEXTURE, UV + vec2(-radius, radius) * ps);
	shadow += texture(TEXTURE, UV + vec2(0.0, -radius) * ps);
	shadow += texture(TEXTURE, UV + vec2(0.0, radius) * ps);
	shadow += texture(TEXTURE, UV + vec2(radius, -radius) * ps);
	shadow += texture(TEXTURE, UV + vec2(radius, 0.0) * ps);
	shadow += texture(TEXTURE, UV + vec2(radius, radius) * ps);
	shadow /= 8.0;
	shadow *= modulate;

	vec4 col = texture(TEXTURE, UV);
	COLOR = mix(shadow, col, col.a);
}"

[sub_resource type="ShaderMaterial" id=9]
shader = SubResource( 8 )
shader_param/radius = 2.0
shader_param/modulate = Color( 0, 0, 0, 1 )

[sub_resource type="Shader" id=10]
code = "shader_type canvas_item;
render_mode unshaded;

uniform float blur_amount;

void fragment() {
	vec4 old_color = COLOR;
	vec3 screen = textureLod(SCREEN_TEXTURE, SCREEN_UV, blur_amount).rgb;
	COLOR.rgb = screen * old_color.rgb;
}"

[sub_resource type="ShaderMaterial" id=11]
shader = SubResource( 10 )
shader_param/blur_amount = 4.0

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.223529, 0.223529, 0.223529, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 6

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0, 0, 0, 0.611765 )
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16

[sub_resource type="DynamicFont" id=14]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0, 0, 0, 0.741176 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.270588, 0.270588, 0.270588, 0.101961 )
corner_radius_top_left = 16
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0, 0, 0, 0.901961 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.270588, 0.270588, 0.270588, 0.101961 )
corner_radius_top_left = 16
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0, 0, 0, 0.541176 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.270588, 0.270588, 0.270588, 0.101961 )
corner_radius_top_left = 16
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0, 0, 0, 0.458824 )
border_width_bottom = 2
border_color = Color( 0, 0, 0, 0.341176 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0, 0, 0, 0.631373 )
border_width_bottom = 2
border_color = Color( 0, 0, 0, 0.341176 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.34902, 0, 0, 0.219608 )
border_width_bottom = 2
border_color = Color( 0.34902, 0, 0, 0.341176 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0, 0, 0, 0.298039 )
border_width_bottom = 2
border_color = Color( 0, 0, 0, 0.341176 )
anti_aliasing = false

[sub_resource type="GDScript" id=22]
script/source = "extends Button

signal on_save_chosen(save_id)

var last_save_id

func initialize(save_id): last_save_id = save_id
func _pressed(): emit_signal(\"on_save_chosen\", last_save_id)"

[sub_resource type="DynamicFont" id=23]
size = 32
font_data = ExtResource( 4 )

[node name="Main Menu" type="Node2D"]

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="Menu Panel" type="Panel" parent="Canvas"]
material = ExtResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="Play Button" type="Button" parent="Canvas/Menu Panel"]
editor/display_folded = true
material = SubResource( 3 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.0
margin_top = 138.0
margin_right = 104.0
margin_bottom = 198.0
theme = ExtResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 6 )

[node name="Label" type="Label" parent="Canvas/Menu Panel/Play Button"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 7 )
text = "Play"
align = 1
valign = 1

[node name="Logo" type="TextureRect" parent="Canvas/Menu Panel"]
material = SubResource( 9 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -448.0
margin_right = 640.0
margin_bottom = 272.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource( 5 )

[node name="Saves Screen" type="Control" parent="Canvas/Menu Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1280.0
margin_right = 1280.0
mouse_filter = 2
script = ExtResource( 6 )
slot_scene = ExtResource( 7 )
slot_container = NodePath("Saves Panel/Save Slots Container")

[node name="Saves Panel" type="Panel" parent="Canvas/Menu Panel/Saves Screen"]
material = SubResource( 11 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -376.0
margin_top = -312.0
margin_right = 376.0
margin_bottom = 312.0
custom_styles/panel = SubResource( 12 )

[node name="Label" type="Label" parent="Canvas/Menu Panel/Saves Screen/Saves Panel"]
anchor_right = 1.0
margin_bottom = 46.0
custom_styles/normal = SubResource( 13 )
custom_fonts/font = SubResource( 14 )
text = "Choose a Save..."
align = 1
valign = 1

[node name="Return Button" type="Button" parent="Canvas/Menu Panel/Saves Screen/Saves Panel"]
margin_right = 136.0
margin_bottom = 46.0
theme = ExtResource( 3 )
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/focus = SubResource( 15 )
custom_styles/normal = SubResource( 17 )
custom_fonts/font = SubResource( 7 )
text = "Return"

[node name="Save Slots Container" type="VBoxContainer" parent="Canvas/Menu Panel/Saves Screen/Saves Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 46.0

[node name="New Save" type="Button" parent="Canvas/Menu Panel/Saves Screen/Saves Panel/Save Slots Container"]
margin_right = 752.0
margin_bottom = 96.0
rect_min_size = Vector2( 64, 96 )
size_flags_horizontal = 3
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 19 )
custom_styles/focus = SubResource( 18 )
custom_styles/disabled = SubResource( 20 )
custom_styles/normal = SubResource( 21 )
script = SubResource( 22 )

[node name="Name" type="RichTextLabel" parent="Canvas/Menu Panel/Saves Screen/Saves Panel/Save Slots Container/New Save"]
margin_left = 16.0
margin_top = 8.0
margin_right = 416.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 20 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 3
theme = ExtResource( 3 )
custom_fonts/normal_font = SubResource( 23 )
text = "Create new Save..."
scroll_active = false

[node name="Tween" type="Tween" parent="Canvas/Menu Panel/Saves Screen"]

[node name="Quitting Label" parent="Canvas" instance=ExtResource( 8 )]
[connection signal="pressed" from="Canvas/Menu Panel/Play Button" to="Canvas/Menu Panel/Saves Screen" method="show_screen"]
[connection signal="pressed" from="Canvas/Menu Panel/Saves Screen/Saves Panel/Return Button" to="Canvas/Menu Panel/Saves Screen" method="hide_screen"]
[connection signal="on_save_chosen" from="Canvas/Menu Panel/Saves Screen/Saves Panel/Save Slots Container/New Save" to="Canvas/Menu Panel/Saves Screen" method="choose_save"]
